# phm

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: composer.rs  config.rs  discover.rs  main.rs  multishell.rs  shell.rs  version.rs
src/commands/: completions.rs  current.rs  default.rs  doctor.rs  env.rs  exec.rs  install.rs  list.rs  mod.rs  uninstall.rs  use_version.rs  which.rs
