[package]
name = "phm"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
colored = "3"
anyhow = "1"
thiserror = "2"
libc = "0.2"

[profile.release]
strip = true
lto = true
